# openthread

./: CMakeLists.txt
.github/workflows/: build.yml  codeql.yml  docker.yml  fuzz.yml  makefile-check.yml  otbr.yml  otci.yml  otns.yml  posix.yml  scorecards.yml  simulation-1.1.yml  simulation-1.2.yml  simulation-1.4.yml  size.yml  toranj.yml  unit.yml  version.yml
include/openthread/: ncp.h
include/openthread/platform/: radio.h
src/cli/: BUILD.gn  CMakeLists.txt  Makefile.am  README_RNL_RNB.md  cli.cpp  cli.hpp  cli_rnl_rnb.cpp  cli_rnl_rnb.hpp
src/core/radio/: radio.hpp  radio_platform.cpp
src/lib/spinel/: radio_spinel.hpp  radio_spinel_impl.hpp  spinel.h
src/ncp/: ncp_base.cpp
src/posix/platform/: radio.cpp
zephyr/: CMakeLists.txt  module.yml
